# playground

./: README.md
CSharp/BlazorWebAsmApp/: Program.cs  Startup.cs  _Imports.razor
CSharp/BlazorWebAsmApp/Shared/: NavMenu.razor
CSharp/BlazorWebAsmApp/wwwroot/: index.html
Clojure/: .gitignore
Clojure/playground/: .gitignore  README.md  project.clj
Clojure/playground/src/playground/: primes.cljc
Clojure/playground/src/playground/polymorphism/: mp4.cljc  open_file.cljc
Clojure/playground/test/playground/: filename_extension_test.cljc  primes_test.cljc
Kotlin/: .gitignore  build.gradle.kts
Kotlin/gui/: build.gradle
Kotlin/src/test/kotlin/mathSet/: TestMathSet.kt
Kotlin/unsoundness/: build.gradle.kts  settings.gradle.kts
Kotlin/unsoundness/src/main/kotlin/: variance.kts
OpenMP/: CMakeLists.txt  distinct_parallel_for.c  hello_world.c  privates.c  reduction.c  sections.c
Rust/: Cargo.toml  README.md
Rust/src/: lib.rs
Rust/src/tests/: church.rs  customized_trait_object.rs  prime.rs  visitor.rs
Scala/dsl-scala/.bloop/: root-test.json  root.json
TypeScript/: .gitignore  package-lock.json  package.json
TypeScript/RxFizzBuzz/: package-lock.json  package.json  tsconfig.json
TypeScript/RxFizzBuzz/src/: index.ts
TypeScript/src/: class.ts  parser.ts
TypeScript/test-driven-typing/: .eslintignore  .eslintrc  jest.config.js  package-lock.json  package.json
TypeScript/test-driven-typing/src/: index.ts
TypeScript/test-driven-typing/test/: is_prime.test.ts
kotlin/: build.gradle
kotlinCode/: settings.gradle
kotlinCode/src/main/kotlin/: tmp.kt
(+10 files in other folders)
