cmake_minimum_required (VERSION 3.9)
project (hello_world)
project (privates)
add_executable(hello_world hello_world.c)
add_executable(privates privates.c)
add_executable(distinct_parallel_for distinct_parallel_for.c)
add_executable(sections sections.c)
add_executable(reduction reduction.c)

find_package(OpenMP)
if(OpenMP_C_FOUND)
    target_link_libraries(hello_world PUBLIC OpenMP::OpenMP_C)
    target_link_libraries(privates PUBLIC OpenMP::OpenMP_C)
    target_link_libraries(distinct_parallel_for PUBLIC OpenMP::OpenMP_C)
    target_link_libraries(sections PUBLIC OpenMP::OpenMP_C)
    target_link_libraries(reduction PUBLIC OpenMP::OpenMP_C)
else()
    message(FATAL_ERROR "Could NOT find OpenMP_C")
endif()
